programming-languages-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: programming-languages-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: programming-languages-database
  template:
    metadata:
      labels:
        app: programming-languages-database
    spec:
      containers:
      - name: programming-languages-database-container
        image: emilienlgs/programming-languages-database:latest
        ports:
        - containerPort: 3306
