programming-languages-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: programming-languages-database
spec:
  ports:
    - nodePort: 30006
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: programming-languages
  type: NodePort
