programming-languages-service.yml
apiVersion: v1
kind: Service
metadata:
  name: programming-languages
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: programming-languages
  type: NodePort
